--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,12 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
+/* index.css or global.css */
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  font-family: system-ui, sans-serif;
+  background-color: #f8fafc;
 }
 
 h1 {
